[package]
name = "feather-rp2040-rtic-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

feather_m0              = "0.12.1"
embedded-hal            = "0.2.7"
panic-halt              = "0.2.0"
cortex-m                = "0.7.2"
cortex-m-rtic           = "1.1.3"
systick-monotonic       = "1.0.0"
fugit                   = "0.3.6"

usb-device              = "0.2.9"
usbd-serial             = "0.1.1"