[package]
name = "feather-rp2040-rtic-rs"
version = "0.1.0"
edition = "2021"
authors = ["Carsten Thue-Bludworth <carstentb@protonmail.com"]

[dependencies]
feather_m0              = {version = "0.12.1", features = ["usb"]}
embedded-hal            = "0.2.7"
panic-halt              = "0.2.0"
cortex-m                = "0.7.2"
cortex-m-rtic           = "1.1.3"
systick-monotonic       = "1.0.0"
fugit                   = "0.3.6"

usb-device              = "0.2.9"
usbd-serial             = "0.1.1"